// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden frames — a composed session, not a block > SF1 · boot · ascii — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 --------------------------------------------------------------------------------
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 --------------------------------------------------------------------------------
22 >                                                                               
23 --------------------------------------------------------------------------------
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · boot · dark — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · boot · high-contrast — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · boot · light — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · selection · dark — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯ /help keys                                                                    
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · selection · light — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯ /help keys                                                                    
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · transcript · dark — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08 ❯ /help                                                                         
09 ⏺︎ help                                                                         
10   ⎿                                                                             
11   │                                                                             
12   │ /help     list the verbs; \`/help keys\` lists the key bindings               
13   │ /clear    empty the transcript; command history is untouched                
14   │ /theme    switch between the dark and light variants                        
15   │ /history  show recent commands                                              
16   │ /exit     end the session                                                   
17   │ /profile  open the profiler's view; \`/profile frame\` opens it on that pane  
18   │                                                                             
19   │ /help keys   Use                                                            
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · transcript · high-contrast — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08 ❯ /help                                                                         
09 ⏺︎ help                                                                         
10   ⎿                                                                             
11   │                                                                             
12   │ /help     list the verbs; \`/help keys\` lists the key bindings               
13   │ /clear    empty the transcript; command history is untouched                
14   │ /theme    switch between the dark and light variants                        
15   │ /history  show recent commands                                              
16   │ /exit     end the session                                                   
17   │ /profile  open the profiler's view; \`/profile frame\` opens it on that pane  
18   │                                                                             
19   │ /help keys   Use                                                            
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · transcript · light — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08 ❯ /help                                                                         
09 ⏺︎ help                                                                         
10   ⎿                                                                             
11   │                                                                             
12   │ /help     list the verbs; \`/help keys\` lists the key bindings               
13   │ /clear    empty the transcript; command history is untouched                
14   │ /theme    switch between the dark and light variants                        
15   │ /history  show recent commands                                              
16   │ /exit     end the session                                                   
17   │ /profile  open the profiler's view; \`/profile frame\` opens it on that pane  
18   │                                                                             
19   │ /help keys   Use                                                            
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯                                                                               
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · typed · dark — the grid 1`] = `
"            1         2         3         4         5         6         7         8
   12345678901234567890123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                                          22:13:20
02 ────────────────────────────────────────────────────────────────────────────────
03                                                                                 
04                                                                                 
05                                                                                 
06                                                                                 
07                                                                                 
08                                                                                 
09                                                                                 
10                                                                                 
11                                                                                 
12                                                                                 
13                                                                                 
14                                                                                 
15                                                                                 
16                                                                                 
17                                                                                 
18                                                                                 
19                                                                                 
20                                                                                 
21 ────────────────────────────────────────────────────────────────────────────────
22 ❯ /help keys                                                                    
23 ────────────────────────────────────────────────────────────────────────────────
24 /help                                                                      /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · window-both · dark — the grid 1`] = `
"            1         2         3         4         5         6
   123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                         22:13
02 ────────────────────────────────────────────────────────────
03                                                             
04                                                             
05                                                             
06 ────────────────────────────────────────────────────────────
07 ❯ ⋯                                                         
08   r08                                                       
09   r09                                                       
10   r10                                                       
11   r11                                                       
12   r12                                                       
13   r13                                                       
14   ⋯                                                         
15 ────────────────────────────────────────────────────────────
16 /help                                                  /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · window-head · dark — the grid 1`] = `
"            1         2         3         4         5         6
   123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                         22:13
02 ────────────────────────────────────────────────────────────
03                                                             
04                                                             
05                                                             
06 ────────────────────────────────────────────────────────────
07 ❯ row0                                                      
08   row1                                                      
09   row2                                                      
10   row3                                                      
11   row4                                                      
12   row5                                                      
13   row6                                                      
14   ⋯                                                         
15 ────────────────────────────────────────────────────────────
16 /help                                                  /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · window-tail · ascii — the grid 1`] = `
"            1         2         3         4         5         6
   123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                         22:13
02 ------------------------------------------------------------
03                                                             
04                                                             
05                                                             
06 ------------------------------------------------------------
07 > ...                                                       
08   row6                                                      
09   row7                                                      
10   row8                                                      
11   row9                                                      
12   row10                                                     
13   row11                                                     
14   last                                                      
15 ------------------------------------------------------------
16 /help                                                  /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · window-tail · dark — the grid 1`] = `
"            1         2         3         4         5         6
   123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                         22:13
02 ────────────────────────────────────────────────────────────
03                                                             
04                                                             
05                                                             
06 ────────────────────────────────────────────────────────────
07 ❯ ⋯                                                         
08   row6                                                      
09   row7                                                      
10   row8                                                      
11   row9                                                      
12   row10                                                     
13   row11                                                     
14   last                                                      
15 ────────────────────────────────────────────────────────────
16 /help                                                  /work"
`;

exports[`golden frames — a composed session, not a block > SF1 · window-wash · dark — the grid 1`] = `
"            1         2         3         4         5         6
   123456789012345678901234567890123456789012345678901234567890
01 calcium  prism                                         22:13
02 ────────────────────────────────────────────────────────────
03                                                             
04                                                             
05                                                             
06 ────────────────────────────────────────────────────────────
07 ❯ ⋯                                                         
08   row6                                                      
09   row7                                                      
10   row8                                                      
11   row9                                                      
12   row10                                                     
13   row11                                                     
14   last                                                      
15 ────────────────────────────────────────────────────────────
16 /help                                                  /work"
`;

exports[`golden frames — a composed session, not a block > SF2 · boot · ascii — the styles 1`] = `
"AAAAAAA..BBBBB..........................................................BBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB......................................................................BBBBB

A = fg 97  bg —  attrs —
B = fg 90  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · boot · dark — the styles 1`] = `
"AAAAAAA..BBBBB..........................................................BBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB......................................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · boot · high-contrast — the styles 1`] = `
"AAAAAAABBCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCC
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
CCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCC

A = fg 38;5;231  bg 48;5;16  attrs —
B = fg —  bg 48;5;16  attrs —
C = fg 38;5;247  bg 48;5;16  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · boot · light — the styles 1`] = `
"AAAAAAABBCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCC
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
CCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCC

A = fg 38;5;237  bg 48;5;231  attrs —
B = fg —  bg 48;5;231  attrs —
C = fg 38;5;246  bg 48;5;231  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · selection · dark — the styles 1`] = `
"AAAAAAA..BBBBB..........................................................BBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
..CCCCCCCCCC....................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB......................................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —
C = fg —  bg 48;5;237  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · selection · light — the styles 1`] = `
"AAAAAAABBCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCC
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBDDDDDDDDDDBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
CCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCC

A = fg 38;5;237  bg 48;5;231  attrs —
B = fg —  bg 48;5;231  attrs —
C = fg 38;5;246  bg 48;5;231  attrs —
D = fg —  bg 48;5;153  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · transcript · dark — the styles 1`] = `
"AAAAAAA..BBBBB..........................................................BBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
CCCCCCC.........................................................................
..B.............................................................................
..B.............................................................................
..B.BBBBBBBB..AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...............
..B.BBBBBBBB..AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA................
..B.BBBBBBBB..AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA........................
..B.BBBBBBBB..AAAAAAAAAAAAAAAAAAAA..............................................
..B.BBBBBBBB..AAAAAAAAAAAAAAA...................................................
..B.BBBBBBBB..AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..
..B.............................................................................
..B.DDDDDDDDDDDDDDDD............................................................
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB......................................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —
C = fg 38;5;74  bg —  attrs —
D = fg 38;5;245  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · transcript · high-contrast — the styles 1`] = `
"AAAAAAABBCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCC
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
DDDDDDDBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBEEEEEEEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
CCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCC

A = fg 38;5;231  bg 48;5;16  attrs —
B = fg —  bg 48;5;16  attrs —
C = fg 38;5;247  bg 48;5;16  attrs —
D = fg 38;5;75  bg 48;5;16  attrs —
E = fg 38;5;251  bg 48;5;16  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · transcript · light — the styles 1`] = `
"AAAAAAABBCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCCCCC
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
DDDDDDDBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAABBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBCCCCCCCCBBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABB
BBCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBCBEEEEEEEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
CCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBCCCCC

A = fg 38;5;237  bg 48;5;231  attrs —
B = fg —  bg 48;5;231  attrs —
C = fg 38;5;246  bg 48;5;231  attrs —
D = fg 38;5;24  bg 48;5;231  attrs —
E = fg 38;5;242  bg 48;5;231  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · typed · dark — the styles 1`] = `
"AAAAAAA..BBBBB..........................................................BBBBBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
................................................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB......................................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · window-both · dark — the styles 1`] = `
"AAAAAAA..BBBBB.........................................BBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB..................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · window-head · dark — the styles 1`] = `
"AAAAAAA..BBBBB.........................................BBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB..................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · window-tail · ascii — the styles 1`] = `
"AAAAAAA..BBBBB.........................................BBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB..................................................BBBBB

A = fg 97  bg —  attrs —
B = fg 90  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · window-tail · dark — the styles 1`] = `
"AAAAAAA..BBBBB.........................................BBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB..................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF2 · window-wash · dark — the styles 1`] = `
"AAAAAAA..BBBBB.........................................BBBBB
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
............................................................
............................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
............................................................
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
..CCCC......................................................
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BBBBB..................................................BBBBB

A = fg 38;5;188  bg —  attrs —
B = fg 38;5;241  bg —  attrs —
C = fg —  bg 48;5;237  attrs —"
`;

exports[`golden frames — a composed session, not a block > SF3 · boot · ascii — the bytes 1`] = `
"# 7 chunk(s) of 7
ESC[?1049h
ESC[?25l
ESC[?2004h
ESC[?1002h
ESC[?1006h
ESC[?25l
ESC[H
ESC[97m
«calcium»
ESC[39m
«» +2sp
ESC[90m
«prism»
ESC[39m
«» +58sp
ESC[90m
«22:13:20»
ESC[39m
CRLF
ESC[90m
«--------------------------------------------------------------------------------»
ESC[0m
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
ESC[90m
«--------------------------------------------------------------------------------»
ESC[0m
CRLF
«>» +79sp
CRLF
ESC[90m
«--------------------------------------------------------------------------------»
ESC[0m
CRLF
ESC[90m
«/help»
ESC[39m
«» +70sp
ESC[90m
«/work»
ESC[39m
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · boot · dark — the bytes 1`] = `
"# 7 chunk(s) of 7
ESC[?1049h
ESC[?25l
ESC[?2004h
ESC[?1002h
ESC[?1006h
ESC[?25l
ESC[H
ESC[38;5;188m
«calcium»
ESC[39m
«» +2sp
ESC[38;5;241m
«prism»
ESC[39m
«» +58sp
ESC[38;5;241m
«22:13:20»
ESC[39m
CRLF
ESC[38;5;241m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
«» +80sp
CRLF
ESC[38;5;241m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
CRLF
«❯» +79sp
CRLF
ESC[38;5;241m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
CRLF
ESC[38;5;241m
«/help»
ESC[39m
«» +70sp
ESC[38;5;241m
«/work»
ESC[39m
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · boot · high-contrast — the bytes 1`] = `
"# 7 chunk(s) of 7
ESC[?1049h
ESC[?25l
ESC[?2004h
ESC[?1002h
ESC[?1006h
ESC[?25l
ESC[H
ESC[48;5;16m
ESC[38;5;231m
«calcium»
ESC[39m
«» +2sp
ESC[38;5;247m
«prism»
ESC[39m
«» +58sp
ESC[38;5;247m
«22:13:20»
ESC[39m
ESC[0m
CRLF
ESC[48;5;16m
ESC[38;5;247m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;16m
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
«» +80sp
ESC[0m
CRLF
ESC[48;5;16m
ESC[38;5;247m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;16m
ESC[0m
CRLF
ESC[48;5;16m
«❯» +79sp
ESC[0m
CRLF
ESC[48;5;16m
ESC[38;5;247m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;16m
ESC[0m
CRLF
ESC[48;5;16m
ESC[38;5;247m
«/help»
ESC[39m
«» +70sp
ESC[38;5;247m
«/work»
ESC[39m
ESC[0m
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · boot · light — the bytes 1`] = `
"# 7 chunk(s) of 7
ESC[?1049h
ESC[?25l
ESC[?2004h
ESC[?1002h
ESC[?1006h
ESC[?25l
ESC[H
ESC[48;5;231m
ESC[38;5;237m
«calcium»
ESC[39m
«» +2sp
ESC[38;5;246m
«prism»
ESC[39m
«» +58sp
ESC[38;5;246m
«22:13:20»
ESC[39m
ESC[0m
CRLF
ESC[48;5;231m
ESC[38;5;246m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;231m
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
«» +80sp
ESC[0m
CRLF
ESC[48;5;231m
ESC[38;5;246m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;231m
ESC[0m
CRLF
ESC[48;5;231m
«❯» +79sp
ESC[0m
CRLF
ESC[48;5;231m
ESC[38;5;246m
«────────────────────────────────────────────────────────────────────────────────»
ESC[0m
ESC[48;5;231m
ESC[0m
CRLF
ESC[48;5;231m
ESC[38;5;246m
«/help»
ESC[39m
«» +70sp
ESC[38;5;246m
«/work»
ESC[39m
ESC[0m
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · selection · dark — the bytes 1`] = `
"# 1 chunk(s) of 9
ESC[?25l
ESC[22;1H
ESC[0m
«❯» +1sp
ESC[48;5;237m
«/help keys»
ESC[0m
«» +68sp
ESC[?25l
ESC[22;13H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · selection · light — the bytes 1`] = `
"# 1 chunk(s) of 9
ESC[?25l
ESC[22;1H
ESC[0m
ESC[48;5;231m
«❯» +1sp
ESC[48;5;153m
«/help keys»
ESC[0m
ESC[48;5;231m
«» +68sp
ESC[0m
ESC[?25l
ESC[22;13H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · transcript · dark — the bytes 1`] = `
"# 2 chunk(s) of 9
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[8;1H
ESC[0m
«❯ /help» +73sp
ESC[9;1H
ESC[0m
ESC[38;5;74m
«⏺︎ help»
ESC[39m
«» +74sp
ESC[10;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«⎿»
ESC[0m
«» +77sp
ESC[11;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +77sp
ESC[12;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/help» +3sp
ESC[39m
«» +2sp
ESC[38;5;188m
«list the verbs; \`/help keys\` lists the key bindings»
ESC[39m
«» +15sp
ESC[13;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/clear» +2sp
ESC[39m
«» +2sp
ESC[38;5;188m
«empty the transcript; command history is untouched»
ESC[39m
«» +16sp
ESC[14;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/theme» +2sp
ESC[39m
«» +2sp
ESC[38;5;188m
«switch between the dark and light variants»
ESC[39m
«» +24sp
ESC[15;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/history»
ESC[39m
«» +2sp
ESC[38;5;188m
«show recent commands»
ESC[39m
«» +46sp
ESC[16;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/exit» +3sp
ESC[39m
«» +2sp
ESC[38;5;188m
«end the session»
ESC[39m
«» +51sp
ESC[17;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;241m
«/profile»
ESC[39m
«» +2sp
ESC[38;5;188m
«open the profiler's view; \`/profile frame\` opens it on that pane»
ESC[39m
«» +2sp
ESC[18;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +77sp
ESC[19;1H
ESC[0m
«» +2sp
ESC[38;5;241m
«│»
ESC[0m
«» +1sp
ESC[38;5;245m
«/help keys   Use»
ESC[39m
«» +60sp
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · transcript · high-contrast — the bytes 1`] = `
"# 2 chunk(s) of 9
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[8;1H
ESC[0m
ESC[48;5;16m
«❯ /help» +73sp
ESC[0m
ESC[9;1H
ESC[0m
ESC[48;5;16m
ESC[38;5;75m
«⏺︎ help»
ESC[39m
«» +74sp
ESC[0m
ESC[10;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«⎿»
ESC[0m
ESC[48;5;16m
«» +77sp
ESC[0m
ESC[11;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +77sp
ESC[0m
ESC[12;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/help» +3sp
ESC[39m
«» +2sp
ESC[38;5;231m
«list the verbs; \`/help keys\` lists the key bindings»
ESC[39m
«» +15sp
ESC[0m
ESC[13;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/clear» +2sp
ESC[39m
«» +2sp
ESC[38;5;231m
«empty the transcript; command history is untouched»
ESC[39m
«» +16sp
ESC[0m
ESC[14;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/theme» +2sp
ESC[39m
«» +2sp
ESC[38;5;231m
«switch between the dark and light variants»
ESC[39m
«» +24sp
ESC[0m
ESC[15;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/history»
ESC[39m
«» +2sp
ESC[38;5;231m
«show recent commands»
ESC[39m
«» +46sp
ESC[0m
ESC[16;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/exit» +3sp
ESC[39m
«» +2sp
ESC[38;5;231m
«end the session»
ESC[39m
«» +51sp
ESC[0m
ESC[17;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;247m
«/profile»
ESC[39m
«» +2sp
ESC[38;5;231m
«open the profiler's view; \`/profile frame\` opens it on that pane»
ESC[39m
«» +2sp
ESC[0m
ESC[18;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +77sp
ESC[0m
ESC[19;1H
ESC[0m
ESC[48;5;16m
«» +2sp
ESC[38;5;247m
«│»
ESC[0m
ESC[48;5;16m
«» +1sp
ESC[38;5;251m
«/help keys   Use»
ESC[39m
«» +60sp
ESC[0m
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · transcript · light — the bytes 1`] = `
"# 2 chunk(s) of 9
ESC[?25l
ESC[?25l
ESC[22;3H
ESC[?25h
ESC[?25l
ESC[8;1H
ESC[0m
ESC[48;5;231m
«❯ /help» +73sp
ESC[0m
ESC[9;1H
ESC[0m
ESC[48;5;231m
ESC[38;5;24m
«⏺︎ help»
ESC[39m
«» +74sp
ESC[0m
ESC[10;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«⎿»
ESC[0m
ESC[48;5;231m
«» +77sp
ESC[0m
ESC[11;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +77sp
ESC[0m
ESC[12;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/help» +3sp
ESC[39m
«» +2sp
ESC[38;5;237m
«list the verbs; \`/help keys\` lists the key bindings»
ESC[39m
«» +15sp
ESC[0m
ESC[13;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/clear» +2sp
ESC[39m
«» +2sp
ESC[38;5;237m
«empty the transcript; command history is untouched»
ESC[39m
«» +16sp
ESC[0m
ESC[14;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/theme» +2sp
ESC[39m
«» +2sp
ESC[38;5;237m
«switch between the dark and light variants»
ESC[39m
«» +24sp
ESC[0m
ESC[15;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/history»
ESC[39m
«» +2sp
ESC[38;5;237m
«show recent commands»
ESC[39m
«» +46sp
ESC[0m
ESC[16;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/exit» +3sp
ESC[39m
«» +2sp
ESC[38;5;237m
«end the session»
ESC[39m
«» +51sp
ESC[0m
ESC[17;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;246m
«/profile»
ESC[39m
«» +2sp
ESC[38;5;237m
«open the profiler's view; \`/profile frame\` opens it on that pane»
ESC[39m
«» +2sp
ESC[0m
ESC[18;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +77sp
ESC[0m
ESC[19;1H
ESC[0m
ESC[48;5;231m
«» +2sp
ESC[38;5;246m
«│»
ESC[0m
ESC[48;5;231m
«» +1sp
ESC[38;5;242m
«/help keys   Use»
ESC[39m
«» +60sp
ESC[0m
ESC[?25l
ESC[22;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · typed · dark — the bytes 1`] = `
"# 1 chunk(s) of 8
ESC[?25l
ESC[22;1H
ESC[0m
«❯ /help keys» +68sp
ESC[?25l
ESC[22;13H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · window-both · dark — the bytes 1`] = `
"# 1 chunk(s) of 48
ESC[?25l
ESC[8;1H
ESC[0m
«  r08» +55sp
ESC[9;1H
ESC[0m
«  r09» +55sp
ESC[10;1H
ESC[0m
«  r10» +55sp
ESC[11;1H
ESC[0m
«  r11» +55sp
ESC[12;1H
ESC[0m
«  r12» +55sp
ESC[13;1H
ESC[0m
«  r13» +55sp
ESC[14;1H
ESC[0m
«  ⋯» +57sp
ESC[?25l
ESC[10;3H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · window-head · dark — the bytes 1`] = `
"# 1 chunk(s) of 33
ESC[?25l
ESC[7;1H
ESC[0m
«❯ row0» +54sp
ESC[8;1H
ESC[0m
«  row1» +54sp
ESC[9;1H
ESC[0m
«  row2» +54sp
ESC[10;1H
ESC[0m
«  row3» +54sp
ESC[11;1H
ESC[0m
«  row4» +54sp
ESC[12;1H
ESC[0m
«  row5» +54sp
ESC[13;1H
ESC[0m
«  row6» +54sp
ESC[14;1H
ESC[0m
«  ⋯» +57sp
ESC[?25l
ESC[12;4H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · window-tail · ascii — the bytes 1`] = `
"# 1 chunk(s) of 32
ESC[?25l
ESC[14;1H
ESC[0m
«  last» +54sp
ESC[?25l
ESC[14;7H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · window-tail · dark — the bytes 1`] = `
"# 1 chunk(s) of 32
ESC[?25l
ESC[14;1H
ESC[0m
«  last» +54sp
ESC[?25l
ESC[14;7H
ESC[?25h"
`;

exports[`golden frames — a composed session, not a block > SF3 · window-wash · dark — the bytes 1`] = `
"# 1 chunk(s) of 33
ESC[?25l
ESC[8;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row6» +54sp
ESC[0m
ESC[9;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row7» +54sp
ESC[0m
ESC[10;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row8» +54sp
ESC[0m
ESC[11;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row9» +54sp
ESC[0m
ESC[12;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row10» +53sp
ESC[0m
ESC[13;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«row11» +53sp
ESC[0m
ESC[14;1H
ESC[0m
«» +2sp
ESC[48;5;237m
«last»
ESC[0m
«» +54sp
ESC[?25l
ESC[14;7H
ESC[?25h"
`;
